remove side space on mobile and fix sticky footer

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -313,6 +313,11 @@ td.symbol, th.symbol {
     padding: 0;
     margin: 0;
   }
+  body {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+  }
+
 }
 
 
@@ -525,4 +530,8 @@ i.package.icon-only {
 .panel-body {
   padding: 15px;
   padding-bottom: 0px;
+}
+
+.navbar-fixed-bottom {
+  position: fixed;
 }
